// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Point asset component should NOT generate features for selected elements which don't exist 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 12,
      "id": "E003",
      "type": "http://ies.data.gov.uk/ontology/ies4#HighVoltageElectricitySubstationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.3292354,
        50.817705,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 8,
      "id": "E025",
      "type": "http://ies.data.gov.uk/ontology/ies4#HighVoltageElectricitySubstationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E025",
    },
    "type": "Feature",
  },
]
`;

exports[`Point asset component should generate asset features 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 12,
      "id": "E003",
      "type": "http://ies.data.gov.uk/ontology/ies4#HighVoltageElectricitySubstationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862509,
        50.746912,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 3,
      "id": "E001",
      "type": "http://ies.data.gov.uk/ontology/ies4#OilFiredPowerGenerationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E001",
    },
    "type": "Feature",
  },
]
`;

exports[`Point asset component should generate dependency features 1`] = `
Array [
  Object {
    "geometry": Object {
      "coordinates": Array [
        Array [
          -1.2862509,
          50.746912,
        ],
        Array [
          -1.2862864,
          50.745509,
        ],
      ],
      "type": "LineString",
    },
    "properties": Object {
      "criticality": 3,
      "dependent": "https://www.iow.gov.uk/DigitalTwin#E001",
      "id": "E001 - E003",
      "lineColor": "#fb3737",
      "lineOpacity": 0.3,
      "provider": "https://www.iow.gov.uk/DigitalTwin#E003",
      "selected": false,
      "uri": "https://www.iow.gov.uk/DigitalTwin#_E001_E003_dependency",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862864,
        50.745509,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 12,
      "id": "E003",
      "type": "http://ies.data.gov.uk/ontology/ies4#HighVoltageElectricitySubstationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E003",
    },
    "type": "Feature",
  },
  Object {
    "geometry": Object {
      "coordinates": Array [
        -1.2862509,
        50.746912,
      ],
      "type": "Point",
    },
    "properties": Object {
      "criticality": 3,
      "id": "E001",
      "type": "http://ies.data.gov.uk/ontology/ies4#OilFiredPowerGenerationComplex",
      "uri": "https://www.iow.gov.uk/DigitalTwin#E001",
    },
    "type": "Feature",
  },
]
`;
